Añadidos todos los paneles y asignados los cambios de vistas a los botones

--- a/src/vista/VistaRegistro.form
+++ b/src/vista/VistaRegistro.form
@@ -422,7 +422,7 @@
           <Properties>
             <Property name="toolTipText" type="java.lang.String" value="Introduce tu fecha de nacimiento"/>
             <Property name="colorBackground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="ce" green="ce" red="ce" type="rgb"/>
+              <Color blue="f2" green="f2" red="f2" type="rgb"/>
             </Property>
             <Property name="colorButtonHover" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="be" green="86" red="0" type="rgb"/>
